--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 			</div>
 			<div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay="0.9s">
 				<div class="team-wrapper">
-					<img src="images/team5.jpg" class="img-responsive" alt="kayak img">
+					<img src="images/double kayak.jpg" class="img-responsive" alt="kayak img">
 						<div class="team-des">
 							<h4>Ocean Kayak</h4>
 							<h3>Malibu Two XL<br>$999.99+tax</h3>
